@@ -1,3 +1,4 @@
+* BUG#7900 Possibilité de découper le batch de traitement des paiements
 * BUG#7538 Ajout des droits sur les boutons des paiements
 
 Version 1.14 - 2017-11-09
